[gd_scene load_steps=3 format=3 uid="uid://bqnwmbwut2a6u"]

[ext_resource type="Script" path="res://scripts/victory_screen.gd" id="1_xp6pu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tij3o"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 30.0
bg_color = Color(0.666667, 0.666667, 0.666667, 0.337255)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.266575, 0.266575, 0.266575, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="victory_screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xp6pu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = -129.0
offset_right = 128.5
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tij3o")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Player1 won the game"
horizontal_alignment = 1

[node name="Play_again" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "PLAY AGAIN"

[node name="Main_menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "MAIN MENU"

[node name="Rage_quit" type="Button" parent="PanelContainer/VBoxContainer"]
physics_interpolation_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "QUIT"

[connection signal="button_up" from="PanelContainer/VBoxContainer/Play_again" to="." method="_on_play_again_button_up"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Main_menu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Rage_quit" to="." method="_on_rage_quit_button_down"]
